--- a/pagina1.html
+++ b/pagina1.html
@@ -10,8 +10,8 @@
 </head>
 
 <body>
-    <header>
-        <!-- Contenedor para la cabecera de la página-->
+    <header> <!-- Contenedor para la cabecera de la página-->
+        <div class="container-header">
         <div class="Logo">
             Logo
         </div>
@@ -22,7 +22,7 @@
                 <li><a href="#">About</a></li>
             </ul>
         </nav>
-
+    </div>
     </header>
     <footer></footer> <!-- Contenedor para el pié de la página-->
 </body>
