--- a/pagina1.html
+++ b/pagina1.html
@@ -13,7 +13,7 @@
     <header> <!-- Contenedor para la cabecera de la página-->
         <div class="container-header">
         <div class="Logo">
-            Logo
+        <img src="Assets/Imagenes/diseno-de-logo-de-turismo.jpg" alt="Logo">
         </div>
         <nav class="menu">
             <ul>
