--- a/pagina1.html
+++ b/pagina1.html
@@ -24,6 +24,10 @@
         </nav>
     </div>
     </header>
+
+    <di class="Arrivals">
+
+    </di>
     <footer></footer> <!-- Contenedor para el pié de la página-->
 </body>
 
