--- a/pagina1.html
+++ b/pagina1.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+    <div class="container">
     <header> <!-- Contenedor para la cabecera de la página-->
         <div class="container-header">
         <div class="Logo">
@@ -28,6 +29,7 @@
     <di class="Arrivals">
 
     </di>
+    </di> 
     <footer></footer> <!-- Contenedor para el pié de la página-->
 </body>
 
