--- a/pagina1.html
+++ b/pagina1.html
@@ -11,26 +11,46 @@
 
 <body>
     <div class="container">
-    <header> <!-- Contenedor para la cabecera de la página-->
-        <div class="container-header">
-        <div class="Logo">
-        <img src="Assets/Imagenes/diseno-de-logo-de-turismo.jpg" alt="Logo">
-        </div>
-        <nav class="menu">
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Contact</a></li>
-                <li><a href="#">About</a></li>
-            </ul>
-        </nav>
-    </div>
-    </header>
+        <header>
+            <!-- Contenedor para la cabecera de la página-->
+            <div class="container-header">
+                <div class="Logo">
+                    <img src="Assets/Imagenes/diseno-de-logo-de-turismo.jpg" alt="Logo">
+                </div>
+                <nav class="menu">
+                    <ul>
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">Contact</a></li>
+                        <li><a href="#">About</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </header>
 
-    <di class="Arrivals">
+        <div class="slideshow-container">
+            <div class="mySlide fade">
+                <div class="numbertext"> 1/3 </div>
+                <img src="Assets/Imagenes/Desierto.jpg" alt="Desierto" style="width: 100%;">
+                <div class="text">Desierto</div>
+            </div>
 
+            <div class="mySlide fade">
+                <div class="numbertext"> 2/3 </div>
+                <img src="Assets/Imagenes/bosque.jpg" alt="Bosque" style="width: 100%;">
+                <div class="text">Bosque</div>
+            </div>
+
+            <div class="mySlide fade">
+                <div class="numbertext"> 3/3 </div>
+                <img src="Assets/Imagenes/playa.jpg" alt="Playa" style="width: 100%;">
+                <div class="text">Playa</div>
+            </div>
+
+            <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+            <a class="next" onclick="plusSlides(1)">&#10095;</a>
+        </di>
     </di>
-    </di> 
-    <footer></footer> <!-- Contenedor para el pié de la página-->
+            <footer></footer> <!-- Contenedor para el pié de la página-->
 </body>
 
 </html>
