--- a/pagina1.html
+++ b/pagina1.html
@@ -48,8 +48,14 @@
 
             <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
             <a class="next" onclick="plusSlides(1)">&#10095;</a>
-        </di>
-    </di>
+
+            <div style="text-align: center;">
+                <span class="dot" onclick="currenSlide(1)"></span>
+                <span class="dot" onclick="currenSlide(2)"></span>
+                <span class="dot" onclick="currenSlide(3)"></span>
+            </div>
+        </div>
+    </div>
             <footer></footer> <!-- Contenedor para el pié de la página-->
 </body>
 
