--- a/pagina1.html
+++ b/pagina1.html
@@ -29,34 +29,35 @@
 
         <div class="slideshow-container">
             <div class="mySlide fade">
-                <div class="numbertext"> 1/3 </div>
+                <div class="numbertext">1/3 </div>
                 <img src="Assets/Imagenes/Desierto.jpg" alt="Desierto" style="width: 100%;">
-                <div class="text">Desierto</div>
+                <div class="text"> Desierto</div>
             </div>
 
             <div class="mySlide fade">
-                <div class="numbertext"> 2/3 </div>
+                <div class="numbertext">2/3 </div>
                 <img src="Assets/Imagenes/bosque.jpg" alt="Bosque" style="width: 100%;">
-                <div class="text">Bosque</div>
+                <div class="text"> Bosque</div>
             </div>
 
             <div class="mySlide fade">
-                <div class="numbertext"> 3/3 </div>
+                <div class="numbertext">3/3 </div>
                 <img src="Assets/Imagenes/playa.jpg" alt="Playa" style="width: 100%;">
-                <div class="text">Playa</div>
+                <div class="text"> Playa</div>
             </div>
 
             <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
             <a class="next" onclick="plusSlides(1)">&#10095;</a>
 
             <div style="text-align: center;">
-                <span class="dot" onclick="currenSlide(1)"></span>
-                <span class="dot" onclick="currenSlide(2)"></span>
-                <span class="dot" onclick="currenSlide(3)"></span>
+                <span class="dot" onclick="currentSlide(1)"></span>
+                <span class="dot" onclick="currentSlide(2)"></span>
+                <span class="dot" onclick="currentSlide(3)"></span>
             </div>
         </div>
     </div>
             <footer></footer> <!-- Contenedor para el pié de la página-->
+            <script src="Assets/javascript.js"></script> <!-- Asi se llama al javascrip-->
 </body>
 
 </html>
