--- a/pagina1.html
+++ b/pagina1.html
@@ -30,19 +30,19 @@
         <div class="slideshow-container">
             <div class="mySlide fade">
                 <div class="numbertext">1/3 </div>
-                <img src="Assets/Imagenes/Desierto.jpg" alt="Desierto" style="width: 100%;">
+                <img src="Assets/Imagenes/Desierto.jpg" alt="Desierto" style="width: 100%;height: 300px;">
                 <div class="text"> Desierto</div>
             </div>
 
             <div class="mySlide fade">
                 <div class="numbertext">2/3 </div>
-                <img src="Assets/Imagenes/bosque.jpg" alt="Bosque" style="width: 100%;">
+                <img src="Assets/Imagenes/bosque.jpg" alt="Bosque" style="width: 100%;height: 300px;">
                 <div class="text"> Bosque</div>
             </div>
 
             <div class="mySlide fade">
                 <div class="numbertext">3/3 </div>
-                <img src="Assets/Imagenes/playa.jpg" alt="Playa" style="width: 100%;">
+                <img src="Assets/Imagenes/playa.jpg" alt="Playa" style="width: 100%;height: 300px;">
                 <div class="text"> Playa</div>
             </div>
 
