--- a/pagina1.html
+++ b/pagina1.html
@@ -56,8 +56,19 @@
             </div>
         </div>
     </div>
-            <footer></footer> <!-- Contenedor para el pié de la página-->
-            <script src="Assets/javascript.js"></script> <!-- Asi se llama al javascrip-->
+    <div class="grid-container">
+    <div class="grid-item">1</div>
+    <div class="grid-item">2</div>
+    <div class="grid-item">3</div>
+    <div class="grid-item">4</div>
+    <div class="grid-item">5</div>
+    <div class="grid-item">6</div>
+    <div class="grid-item">7</div>
+    <div class="grid-item">8</div>
+    <div class="grid-item">9</div>
+
+    </div>
+    <script src="Assets/javascript.js"></script> <!-- Asi se llama al javascrip-->
 </body>
 
 </html>
