--- a/pagina1.html
+++ b/pagina1.html
@@ -57,15 +57,25 @@
         </div>
     </div>
     <div class="grid-container">
-    <div class="grid-item">1</div>
-    <div class="grid-item">2</div>
-    <div class="grid-item">3</div>
-    <div class="grid-item">4</div>
-    <div class="grid-item">5</div>
-    <div class="grid-item">6</div>
-    <div class="grid-item">7</div>
-    <div class="grid-item">8</div>
-    <div class="grid-item">9</div>
+    <div class="grid-item">
+        <img src="Assets/Imagenes/promotions/45.jpg" alt="promo1">
+    </div>
+    <div class="grid-item">
+        <img src="Assets/Imagenes/promotions/full-day.jpg" alt="promo2">
+    </div>
+    <div class="grid-item">
+        <img src="Assets/Imagenes/promotions/imagen4.jpg" alt="promo3">
+    </div>
+    <div class="grid-item">
+        <img src="Assets/Imagenes/promotions/images.jpg" alt="promo4">
+    </div>
+    <div class="grid-item">
+        <img src="Assets/Imagenes/promotions/PROMO-SAN-ANDRES.jpg" alt="promo5">
+    </div>
+    <div class="grid-item">
+        <img src="Assets/Imagenes/promotions/PROMOS-NUEVAS-Septiembre-2018-face-1200x628px-opcion-2-7lpje2jsl1u0.jpg" alt="promo6">
+    </div>
+   
 
     </div>
     <script src="Assets/javascript.js"></script> <!-- Asi se llama al javascrip-->
