creación de contacto

--- a/pagina1.html
+++ b/pagina1.html
@@ -30,34 +30,34 @@
 
     <div class="container-body">
         <div class="slideshow-container">
-        <div class="mySlide fade">
-            <div class="numbertext"> 1/3 </div>
-            <img src="Assets/Imagenes/Desierto.jpg" alt="Desierto" style="width: 100%;height: 300px;">
-            <div class="text"> Desierto</div>
+            <div class="mySlide fade">
+                <div class="numbertext"> 1/3 </div>
+                <img src="Assets/Imagenes/Desierto.jpg" alt="Desierto" style="width: 100%;height: 300px;">
+                <div class="text"> Desierto</div>
+            </div>
+
+            <div class="mySlide fade">
+                <div class="numbertext"> 2/3 </div>
+                <img src="Assets/Imagenes/bosque.jpg" alt="Bosque" style="width: 100%;height: 300px;">
+                <div class="text"> Bosque</div>
+            </div>
+
+            <div class="mySlide fade">
+                <div class="numbertext"> 3/3 </div>
+                <img src="Assets/Imagenes/playa.jpg" alt="Playa" style="width: 100%;height: 300px;">
+                <div class="text"> Playa</div>
+            </div>
+
+            <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+            <a class="next" onclick="plusSlides(1)">&#10095;</a>
+
+            <div style="text-align: center;">
+                <span class="dot" onclick="currentSlide(1)"></span>
+                <span class="dot" onclick="currentSlide(2)"></span>
+                <span class="dot" onclick="currentSlide(3)"></span>
+            </div>
         </div>
-
-        <div class="mySlide fade">
-        <div class="numbertext"> 2/3 </div>
-        <img src="Assets/Imagenes/bosque.jpg" alt="Bosque" style="width: 100%;height: 300px;">
-        <div class="text"> Bosque</div>
     </div>
-
-    <div class="mySlide fade">
-        <div class="numbertext"> 3/3 </div>
-        <img src="Assets/Imagenes/playa.jpg" alt="Playa" style="width: 100%;height: 300px;">
-        <div class="text"> Playa</div>
-    </div>
-
-    <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-    <a class="next" onclick="plusSlides(1)">&#10095;</a>
-
-    <div style="text-align: center;">
-        <span class="dot" onclick="currentSlide(1)"></span>
-        <span class="dot" onclick="currentSlide(2)"></span>
-        <span class="dot" onclick="currentSlide(3)"></span>
-    </div>
- </div>
-</div>
 
     <div class="grid-container">
         <div class="grid-item">
@@ -77,10 +77,10 @@
         </div>
         <div class="grid-item">
             <img src="Assets/Imagenes/promotions/PROMOS-NUEVAS-Septiembre-2018-face-1200x628px-opcion-2-7lpje2jsl1u0.jpg"
-                alt="promo6">
+                alt="promo6"> <!-- para traer imagenes-->
         </div>
     </div>
-    
+
     <script src="Assets/javascript.js"></script> <!-- Asi se llama al javascrip-->
 </body>
 
