--- a/pagina1.html
+++ b/pagina1.html
@@ -15,12 +15,14 @@
             <!-- Contenedor para la cabecera de la página-->
             <div class="container-header">
                 <div class="Logo">
-                    <img src="Assets/Imagenes/diseno-de-logo-de-turismo.jpg" alt="Logo">
+                    <a href="./pagina1.html">
+                        <img src="Assets/Imagenes/diseno-de-logo-de-turismo.jpg" alt="Logo">  
+                    </a>
                 </div>
                 <nav class="menu">
                     <ul>
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#">Contact</a></li>
+                        <li><a href="./pagina1.html">Home</a></li>
+                        <li><a href="./contatanos.html">Contact</a></li>
                         <li><a href="#">About</a></li>
                     </ul>
                 </nav>
