--- a/contatanos.html
+++ b/contatanos.html
@@ -1,12 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="Assets/style1.css">
     <title>Document</title>
 </head>
+
 <body>
-    
+    <div class="container">
+        <header>
+            <!-- Contenedor para la cabecera de la página-->
+            <div class="container-header">
+                <div class="Logo">
+                    <a href="./pagina1.html">
+                        <img src="Assets/Imagenes/diseno-de-logo-de-turismo.jpg" alt="Logo">
+                    </a>
+                </div>
+                <nav class="menu">
+                    <ul>
+                        <li><a href="./pagina1.html">Home</a></li>
+                        <li><a href="./contatanos.html">Contact</a></li>
+                        <li><a href="#">About</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </header>
+    </div>
+    <div class="container-info">
+        <div class="container-info-img">
+            <div>
+                <h1> Nombre Aqui</h1>
+                <p> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Praesentium commodi aperiam repellendus
+                    consequatur deserunt neque dolorem tempora porro! Ut, quibusdam nihil. Explicabo quos possimus autem
+                    sunt facilis excepturi suscipit corrupti.
+                </p>
+            </div>
+            <img src="/Assets/Imagenes/nieve.jpg" alt="nieve">
+        </div>
+    </div>
+    <div class="container-text">
+        <h1 class="Titulo-temporal">
+            Tituolo temporal
+        </h1>
+    </div>
 </body>
+
 </html>
