--- a/pagina1.html
+++ b/pagina1.html
@@ -82,7 +82,21 @@
                 alt="promo6"> <!-- para traer imagenes-->
         </div>
     </div>
-
+<div class="container-footer">
+    <div class="grid-footer">
+        <h6>Menú</h6>
+        <nav class="menu">
+            <ul>
+                <li><a href="./pagina1.html">Home</a></li>
+                <li><a href="./contatanos.html">Contact</a></li>
+                <li><a href="#">About</a></li>
+            </ul>
+        </nav>
+    </div>
+    <div class="grid-footer"></div>
+    <div class="grid-footer"></div>
+    <div class="grid-footer"></div>   
+</div>
     <script src="Assets/javascript.js"></script> <!-- Asi se llama al javascrip-->
 </body>
 
