--- a/pagina1.html
+++ b/pagina1.html
@@ -95,7 +95,15 @@
     <div class="grid-footer"></div>
     <div class="grid-footer"></div>
     <div class="grid-footer">
-        <h5>Contact</h5> 
+        <h5 style="margin-bottom: 20px;">Contact</h5> 
+        <a class="Contact" href="#">
+            <span>
+                <i class="fas fa-envelope-open-text">    valennzapata@gmail.com</i></span>
+        </a>
+        <a class="Contact" href="#">
+            <span>
+                <i class="fab fa-whatsapp">  3206833841  </i></span>
+        </a>
     </div>   
 </div>
     <script src="Assets/javascript.js"></script> <!-- Asi se llama al javascrip-->
