--- a/Nosotros.html
+++ b/Nosotros.html
@@ -22,7 +22,8 @@
                 <nav class="menu">
                     <ul>
                         <li><a href="./pagina1.html">Home</a></li>
-                        <li><a href="./contatanos.html">Contact</a></li>
+                        <li><a href="#">Contact</a></li>
+                        <li><a href="./Nosotros.html∫">Nosotros</a></li>
                         <li><a href="#">About</a></li>
                     </ul>
                 </nav>
