--- a/pagina1.html
+++ b/pagina1.html
@@ -23,7 +23,8 @@
                 <nav class="menu">
                     <ul>
                         <li><a href="./pagina1.html">Home</a></li>
-                        <li><a href="./contatanos.html">Contact</a></li>
+                        <li><a href="#">Contact</a></li>
+                        <li><a href="./contatanos.html">Nosotros</a></li>
                         <li><a href="#">About</a></li>
                     </ul>
                 </nav>
