--- a/Nosotros.html
+++ b/Nosotros.html
@@ -23,7 +23,7 @@
                     <ul>
                         <li><a href="./pagina1.html">Home</a></li>
                         <li><a href="#">Contact</a></li>
-                        <li><a href="./Nosotros.html∫">Nosotros</a></li>
+                        <li><a href="./Nosotros.html∫">Us</a></li>
                         <li><a href="#">About</a></li>
                     </ul>
                 </nav>
