--- a/pagina1.html
+++ b/pagina1.html
@@ -24,7 +24,7 @@
                     <ul>
                         <li><a href="./pagina1.html">Home</a></li>
                         <li><a href="#">Contact</a></li>
-                        <li><a href="./contatanos.html">Nosotros</a></li>
+                        <li><a href="./Nosotros.html">Us</a></li>
                         <li><a href="#">About</a></li>
                     </ul>
                 </nav>
