--- a/pagina1.html
+++ b/pagina1.html
@@ -17,7 +17,7 @@
             <div class="container-header">
                 <div class="Logo">
                     <a href="./pagina1.html">
-                        <img src="Assets/Imagenes/diseno-de-logo-de-turismo.jpg" alt="Logo">  
+                        <img src="Assets/Imagenes/diseno-de-logo-de-turismo.jpg" alt="Logo">
                     </a>
                 </div>
                 <nav class="menu">
@@ -84,29 +84,37 @@
                 alt="promo6"> <!-- para traer imagenes-->
         </div>
     </div>
-<div class="container-footer">
-    <div class="grid-footer">
-        <h5>Menú</h5>
+    <div class="contact-icons">
+        <a href="https://wa.me/573206833841" target="_blank">
+            <span class="WhatApp"><i class="fab fa-whatsapp-square"></i></span>
+        </a><br>
+        <a href=" https://www.instagram.com/invites/contact/?i=uwbyhu8jwreo&utm_content=l0da16" target="_blank">
+            <span class="Instagram"><i class="fab fa-instagram-square"></i></span>
+        </a>
+    </div>
+    <div class="container-footer">
+        <div class="grid-footer">
+            <h5>Menú</h5>
             <ul>
                 <li><a href="./pagina1.html">Home</a></li>
                 <li><a href="./contatanos.html">Contact</a></li>
                 <li><a href="#">About</a></li>
             </ul>
+        </div>
+        <div class="grid-footer"></div>
+        <div class="grid-footer"></div>
+        <div class="grid-footer">
+            <h5 style="margin-bottom: 20px;">Contact</h5>
+            <a class="Contact" href="mailto:valennzapata@gmail.com?subject=hablame" target="_blank">
+                <span>
+                    <i class="fas fa-envelope-open-text"> valennzapata@gmail.com</i></span>
+            </a>
+            <a class="Contact" href="https://wa.me/573206833841" target="_blank">
+                <span>
+                    <i class="fab fa-whatsapp"> 3206833841 </i></span>
+            </a>
+        </div>
     </div>
-    <div class="grid-footer"></div>
-    <div class="grid-footer"></div>
-    <div class="grid-footer">
-        <h5 style="margin-bottom: 20px;">Contact</h5> 
-        <a class="Contact" href="#">
-            <span>
-                <i class="fas fa-envelope-open-text">    valennzapata@gmail.com</i></span>
-        </a>
-        <a class="Contact" href="#">
-            <span>
-                <i class="fab fa-whatsapp">  3206833841  </i></span>
-        </a>
-    </div>   
-</div>
     <script src="Assets/javascript.js"></script> <!-- Asi se llama al javascrip-->
 </body>
 
