--- a/Nosotros.html
+++ b/Nosotros.html
@@ -107,18 +107,27 @@
                         <i class="fab fa-whatsapp"> 3206833841 </i></span>
                 </a>
             </div>
-            <a class="American" href="" target="_blank">
-                <span> <i class="fab fa-cc-amex"></i></span>
-            </a>
-            <a class="Visa" href="" target="_blank">
-                <span><i class="fab fa-cc-visa"></i></span>
-            </a>
-            <a class=" master" href="" target="_blank">
-                <span><i class="fab fa-cc-mastercard"></i></span>
-            </a>
+
+            <div class="grid-pagos">
+                <h5 style="margin-bottom: 30px;">Pagos</h5>
+                <a class="American" href="https://www.americanexpress.com/es-co/network/" target="_blank">
+                    <span> <i class="fab fa-cc-amex"></i></span>
+                </a>
+                <a class="Visa"
+                    href="https://www.visa.com.co/pague-con-visa/tarjetas/credito.html?dclid=&gclid=CjwKCAjw7fuJBhBdEiwA2lLMYflduV0kBNj1jDuWaY32_WTsOCWsiSi_M_t7rg1Ws1hXQs_veZR4oRoCOSIQAvD_BwE&gclsrc=aw.ds"
+                    target="_blank">
+                    <span><i class="fab fa-cc-visa"></i></span>
+                </a>
+                <a class=" master"
+                    href="https://www.comparaonline.com.co/tarjeta-de-credito/marca-mastercard?gclid=CjwKCAjw7fuJBhBdEiwA2lLMYbErBUMXIm4YRj9E9jjgNcgy4-fbwofxJQzSIJAlEWpWRL6FMUMtpBoCZOYQAvD_BwE"
+                    target="_blank">
+                    <span><i class="fab fa-cc-mastercard"></i></span>
+                </a>
+            </div>
         </div>
     </div>
-    
+
+
 </body>
 
 </html>
