--- a/pagina1.html
+++ b/pagina1.html
@@ -10,7 +10,7 @@
     <title>Document</title>
 </head>
 
-<body>
+<body class="body-home">
     <div class="container">
         <header>
             <!-- Contenedor para la cabecera de la página-->
@@ -23,7 +23,7 @@
                 <nav class="menu">
                     <ul>
                         <li><a href="./pagina1.html">Home</a></li>
-                        <li><a href="#">Contact</a></li>
+                        <li><a href="./Contact.html">Contact</a></li>
                         <li><a href="./Nosotros.html">Us</a></li>
                         <li><a href="#">About</a></li>
                     </ul>
@@ -97,7 +97,8 @@
             <h5>Menú</h5>
             <ul>
                 <li><a href="./pagina1.html">Home</a></li>
-                <li><a href="./contatanos.html">Contact</a></li>
+                <li><a href="./Contact.html">Contact</a></li>
+                <li><a href="./Nosotros.html">Us</a></li>
                 <li><a href="#">About</a></li>
             </ul>
         </div>
