--- a/Contact.html
+++ b/Contact.html
@@ -36,7 +36,7 @@
         <div class="form-supplier">
             <form name="myForm">
                 <label>Name <span class="required"> * </span>: </label>
-                <input tupe="text" id="name">
+                <input type="text" id="name">
                 <label class="error" id="errorName"></label>
                 <br><br>
 
@@ -50,7 +50,11 @@
                 <label class="error" id="errorGender"></label>
                 <br><br>
 
+                <label>Correo <span class="required"> * </span>: </label>
+                <input type="text" id="Correo">
+                <label class="error" id="errorCorreo"></label>
 
+                <br><br>
                 <label id="result"></label>
 
                 <br><br>
@@ -60,8 +64,10 @@
         </div>
 
         <div>
+            <br><br>
             <div class="container-footer">
                 <div class="grid-footer">
+
                     <h5>Menú</h5>
                     <ul>
                         <li><a href="./pagina1.html">Home</a></li>
