--- a/Contact.html
+++ b/Contact.html
@@ -24,10 +24,10 @@
                     </div>
                     <nav class="menu">
                         <ul>
-                            <li><a href="./pagina1.html">Home</a></li>
-                            <li><a href="./Contact.html">Contact</a></li>
-                            <li><a href="./Nosotros.html">Us</a></li>
-                            <li><a href="#">About</a></li>
+                            <li><a href="./pagina1.html">Hogar</a></li>
+                            <li><a href="./Contact.html">Contacto</a></li>
+                            <li><a href="./Nosotros.html">Nosotros</a></li>
+                            
                         </ul>
                     </nav>
                 </div>
@@ -35,12 +35,12 @@
         </div>
         <div class="form-supplier">
             <form name="myForm">
-                <label>Name <span class="required"> * </span>: </label>
+                <label>Nombre <span class="required"> * </span>: </label>
                 <input type="text" id="name">
                 <label class="error" id="errorName"></label>
                 <br><br>
 
-                <label>Gender <span class="required"> * </span>: </label>
+                <label>Género <span class="required"> * </span>: </label>
                 <select id="Gender">
                     <option value="e"> ----- </option>
                     <option value="M"> Male </option>
@@ -50,7 +50,7 @@
                 <label class="error" id="errorGender"></label>
                 <br><br>
 
-                <label>Correo <span class="required"> * </span>: </label>
+                <label>Correo<span class="required"> * </span>: </label>
                 <input type="text" id="Correo">
                 <label class="error" id="errorCorreo"></label>
 
@@ -70,14 +70,13 @@
 
                     <h5>Menú</h5>
                     <ul>
-                        <li><a href="./pagina1.html">Home</a></li>
-                        <li><a href="./Contact.html">Contact</a></li>
-                        <li><a href="./Nosotros.html">Us</a></li>
-                        <li><a href="#">About</a></li>
-                    </ul>
+                        <li><a href="./pagina1.html">Hogar</a></li>
+                        <li><a href="./Contact.html">Contacto</a></li>
+                        <li><a href="./Nosotros.html">Nosotros</a></li>
+                        
                 </div>
                 <div class="grid-footer">
-                    <h5 style="margin-bottom: 20px;">Contact</h5>
+                    <h5 style="margin-bottom: 20px;">Contacto</h5>
                     <a class="Contact" href="mailto:valennzapata@gmail.com?subject=hablame" target="_blank">
                         <span>
                             <i class="fas fa-envelope-open-text"> valennzapata@gmail.com</i></span>
