--- a/Nosotros.html
+++ b/Nosotros.html
@@ -22,10 +22,10 @@
                 </div>
                 <nav class="menu">
                     <ul>
-                        <li><a href="./pagina1.html">Home</a></li>
-                        <li><a href="Contact.html">Contact</a></li>
-                        <li><a href="./Nosotros.html∫">Us</a></li>
-                        <li><a href="#">About</a></li>
+                        <li><a href="./pagina1.html">Hogar</a></li>
+                        <li><a href="Contact.html">Contacto</a></li>
+                        <li><a href="./Nosotros.html∫">Nosotros</a></li>
+                        
                     </ul>
                 </nav>
             </div>
@@ -91,14 +91,14 @@
             <div class="grid-footer">
                 <h5>Menú</h5>
                 <ul>
-                    <li><a href="./pagina1.html">Home</a></li>
-                    <li><a href="./Contact.html">Contact</a></li>
-                    <li><a href="./Nosotros.html">Us</a></li>
-                    <li><a href="#">About</a></li>
+                    <li><a href="./pagina1.html">Hogar</a></li>
+                    <li><a href="./Contact.html">Contacto</a></li>
+                    <li><a href="./Nosotros.html">Nosotros</a></li>
+                    
                 </ul>
             </div>
             <div class="grid-footer">
-                <h5 style="margin-bottom: 20px;">Contact</h5>
+                <h5 style="margin-bottom: 20px;">Contacto</h5>
                 <a class="Contact" href="mailto:valennzapata@gmail.com?subject=hablame" target="_blank">
                     <span>
                         <i class="fas fa-envelope-open-text"> valennzapata@gmail.com</i></span>
