--- a/Contacto.html
+++ b/Contacto.html
@@ -33,40 +33,20 @@
                 </div>
             </header>
         </div>
-        <div class="form-supplier">
-            <form name="myForm">
-                <label>Nombre <span class="required"> * </span>: </label>
-                <input type="text" id="name">
-                <label class="error" id="errorName"></label>
-                <br><br>
 
-                <label>Género <span class="required"> * </span>: </label>
-                <select id="Gender">
-                    <option value="e"> ----- </option>
-                    <option value="M"> Male </option>
-                    <option value="F"> Female </option>
+<form action="" class="formulario">
+    <h1 class="formulario__titulo">Contáctenos</h1>
+    <input type="text" class="formulario__input">
+    <label for="" class="formulario__label">Nombres</label>
+    <input type="text" class="formulario__input">
+    <label for="" class="formulario__label">Correo</label>
+    <input type="text" class="formulario__input">
+    <label for="" class="formulario__label">Teléfono</label>
+    <input type="text" class="formulario__input">
+    <label for="" class="formulario__label">Mensaje</label>
+    <input type="submit" class="formulario__submit">
 
-                </select>
-                <label class="error" id="errorGender"></label>
-                <br><br>
-
-                <label>Correo<span class="required"> * </span>: </label>
-                <input type="text" id="Correo">
-                <label class="error" id="errorCorreo"></label>
-                <br><br>
-
-                <label>Teléfono<span class="required"> * </span>: </label>
-                <input type="text" id="Telefono">
-                <label class="error" id="errorTelefono"></label>
-                <br><br>
-
-                <label id="result"></label>
-
-                <br><br>
-
-                <input type="button" onclick="validForm()" value="Enviar">
-            </form>
-        </div>
+</form>
 
         <div>
             <br><br>
