--- a/pagina1.html
+++ b/pagina1.html
@@ -23,7 +23,7 @@
                 <nav class="menu">
                     <ul>
                         <li><a href="./pagina1.html">Hogar</a></li>
-                        <li><a href="./Contact.html">Contacto</a></li>
+                        <li><a href="./Contacto.html">Contacto</a></li>
                         <li><a href="./Nosotros.html">Nosotros</a></li>
 
                     </ul>
@@ -98,7 +98,7 @@
                 <h5>Menú</h5>
                 <ul>
                     <li><a href="./pagina1.html">Hogar</a></li>
-                    <li><a href="./Contact.html">Contacto</a></li>
+                    <li><a href="./Contacto.html">Contacto</a></li>
                     <li><a href="./Nosotros.html">Nosotros</a></li>
                     
                 </ul>
